editing questions and capitalizing headings

--- a/app/templates/question-group.hbs
+++ b/app/templates/question-group.hbs
@@ -3,7 +3,7 @@
   <ul>
     {{#each children}}
     <li>
-      <h3>{{name}}</h3>
+      <h3 class="text-capitalize">{{name}}</h3>
       <dl>
         <dt>Explanation</dt>
         <dd>{{explanation}}</dd>
