--- a/app/templates/fwk-params.hbs
+++ b/app/templates/fwk-params.hbs
@@ -4,7 +4,7 @@
       <a data-toggle="collapse" data-parent="#param-groups" href="#{{id}}-body" aria-expanded="true" aria-controls="{{id}}-body">
         {{name}}
       </a>
-      <span class="pull-right">{{total}}</span>
+      <span class="badge pull-right">{{total}}</span>
     </h4>
   </div>
   <div id="{{id}}-body" class="panel-collapse collapse" role="tabpanel" aria-labelledby="{{id}}">
