adding bubble chart

--- a/app/templates/fwk-params.hbs
+++ b/app/templates/fwk-params.hbs
@@ -7,7 +7,7 @@
       <span class="badge pull-right">{{total}}</span>
     </h4>
   </div>
-  <div id="{{id}}-body" class="panel-collapse" role="tabpanel" aria-labelledby="{{id}}">
+  <div id="{{id}}-body" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="{{id}}">
     <div class="panel-body">
       {{#each children}}
       <div id="w-{{id}}" class="form-group">
