--- a/app/templates/fwk-table.hbs
+++ b/app/templates/fwk-table.hbs
@@ -15,4 +15,11 @@
     </tr>
     {{/each}}
   </tbody>
+  <tfoot>
+    <tr>
+      {{#each footer}}
+      <th>{{.}}</th>
+      {{/each}}
+    </tr>
+  </tfoot>
 </table>
