displaying accordion toggle state

--- a/app/templates/fwk-params.hbs
+++ b/app/templates/fwk-params.hbs
@@ -2,6 +2,9 @@
   <div class="panel-heading" role="tab" id="{{id}}">
     <h4 class="panel-title">
       <a data-toggle="collapse" data-parent="#param-groups" href="#{{id}}-body" aria-controls="{{id}}-body">
+        <span class="toggle">
+          <span class="glyphicon glyphicon-triangle-bottom"></span>
+        </span>
         {{name}}
       </a>
       <span class="badge pull-right" style="min-width: 3em;">{{weight}}</span>
