--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,11 @@ body { overflow-x: hidden }
   width: 200px;
   margin: 0px 10px;
 }
+.panel-title  .toggle .glyphicon-triangle-bottom {
+  display: inline-block;
+  transition: all .5s;
+}
+.panel-title .collapsed .toggle .glyphicon-triangle-bottom {
+  transform: rotate(-90deg);
+  transition: all .5s;
+}
