--- a/app/templates/fwk-params.hbs
+++ b/app/templates/fwk-params.hbs
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading" role="tab" id="{{id}}">
     <h4 class="panel-title">
-      <a data-toggle="collapse" data-parent="#param-groups" href="#{{id}}-body" aria-controls="{{id}}-body">
+      <a class="{{#unless expanded}}collapsed{{/unless}}" data-toggle="collapse" data-parent="#param-groups" href="#{{id}}-body" aria-controls="{{id}}-body">
         <span class="toggle">
           <span class="glyphicon glyphicon-triangle-bottom"></span>
         </span>
@@ -16,7 +16,7 @@
       {{#each children}}
       <div id="w-{{id}}" class="form-group">
         <div>
-          <label class="weight" for="{{id}}">{{parameter}}</label>
+          <label class="weight" for="{{id}}">{{parameter}}{{#if info}} <a class="text-info" href="#info-{{id}}" data-content="{{info}}" data-toggle="popover" data-trigger="focus"><span class="glyphicon glyphicon-info-sign"></span></a>{{/if}}</label>
           <span class="pull-right">{{weight}}</span>
         </div>
         <input id="{{id}}" data-group="{{../id}}" class="weight" type="range" min="0" max="10" step=".5" data-value="{{weight}}" value="{{weight}}"/>
