--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -1,1 +1,6 @@
-<p class="center-block"><small>&copy; Wipro Limited {{year}}</small></p>
+<div class="container">
+  <small>&copy; Wipro Limited {{year}}</small>
+  <a class="pull-right" href="https://www.gnu.org/licenses/agpl-3.0.html">
+    <img alt="AGPLv3" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/06/AGPLv3_Logo.svg/200px-AGPLv3_Logo.svg.png" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/0/06/AGPLv3_Logo.svg/300px-AGPLv3_Logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/0/06/AGPLv3_Logo.svg/400px-AGPLv3_Logo.svg.png 2x" data-file-width="864" data-file-height="358" height="50" /> 
+  </a>
+</div>
