--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,19 @@ body { overflow-x: hidden }
   transform: rotate(-90deg);
   transition: all .5s;
 }
+
+footer {
+  background-color: #F5F5F5;
+  height: 60px;
+}
+footer small {
+  vertical-align: middle;
+  line-height: 60px;
+}
+.jumbotron {
+  padding: 20px 15px;
+}
+
+.jumbotron p {
+  font-size: 16px;
+}
