showing table by default and displaying logos instead of text in table

--- a/app/templates/fwk-table.hbs
+++ b/app/templates/fwk-table.hbs
@@ -2,7 +2,11 @@
   <thead>
     <tr>
       {{#each header}}
-      <th>{{.}}</th>
+      {{#if @first}}
+      <th>{{label}}</th>
+      {{else}}
+      <th><a href="{{link}}" title={{label}}><img alt="{{label}}" src="img/{{id}}.png"/><br/>{{label}}</a></th>
+      {{/if}}
       {{/each}}
     </tr>
   </thead>
