--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,14 @@ footer small {
 #tabContent > div {
   padding-top: 5px;
 }
+
+#table a > img {
+  width: 50px;
+}
+#table th:first-child,td:first-child {
+  text-align: left;
+}
+#table th,td {
+  text-align: center;
+}
+
